# meli-scraping-test

./: .gitignore  README.md  compose.yml
back/: .env  Dockerfile  pyproject.toml
back/src/: captcha.py  index.py
back/src/services/: aws.py  redis.py
back/src/utils/: const.py  tasks.py  text.py
captcha_solver/: Dockerfile  pyproject.toml  requirements.txt
captcha_solver/src/: api.py  audio.py  captcha.py  image.py  pdf.py
crawler/: .env  Dockerfile  package.json  tsconfig.json
crawler/debug/: task.json
crawler/src/: dev.ts  index.ts  run.ts
crawler/src/services/: BrowserService.ts  FileService.ts  RedisService.ts  RequestService.ts  S3Service.ts  SQSService.ts  index.ts
crawler/src/types/: index.ts  result.ts  steps.ts  task.ts
crawler/src/utils/: captcha.ts  const.ts  index.ts  regex.ts  upload.ts
data-collector/: .gitignore  package.json
data-collector/src/: app.module.ts
data-collector/src/modules/product/: product.controller.ts  product.service.ts
data-collector/src/modules/screenshot/: index.ts  screenshot.controller.ts  screenshot.service.ts
data-collector/src/services/: browser.service.ts  file.service.ts  index.ts
data-collector/src/steps/: Click.ts  Scroll.ts  Step.ts  index.ts
data-collector/src/types/: result.ts  steps.ts
data-collector/src/utils/: captcha.ts  index.ts  regex.ts
front/: Dockerfile  package.json
front/public/: index.html
front/src/: index.tsx
front/src/pages/Home/: index.tsx  styles.css
front/src/types/: task.ts
front/src/utils/: request.ts
